v3.8.5 (XXXX-XX-XX)
-------------------

* Changed various default values for RocksDB to tune operations for different
  typical scenarios like gp2 type volumes and gp3 type volumes and locally
  attached SSDs with RAID0:
  - `--rocksdb.level0-slowdown-trigger` has been decreased from 20 to 16
  - `--rocksdb.level0-stop-trigger` has been increased from 36 to 256
  - `--rocksdb.max-background-jobs` has been increased to the number of cores
    and is no longer limited to 8
  - `--rocksdb.enabled-pipelined-write` is now `true` by default instead of
    `false`
  - `--rocksdb.throttle-frequency` has been decreased from 60000ms down to
    1000ms per iteration, which makes the RocksDB throttle react much quicker
  - `--rocksdb.pending-compactions-slowdown-trigger` has been decreased from 64
    GB down to 8 GB
  - `--rocksdb.pending-compactions-stop-trigger` has been decreased from 256 GB
    down to 16 GB
  - `--rocksdb.max-subcompactions` has been increased from 1 to 2
  - `--rocksdb.throttle-slots` has been increased from 63 to 120
  Combined, these changes help ArangoDB/RocksDB to react quicker to a backlog of
  background jobs and thus to prevent catastrophic stops which abort data
  ingestion or lead to cluster internal timeouts.

* Added startup options to adjust previously hard-coded parameters for RocksDB's
  behavior:

  - `--rocksdb.pending-compactions-bytes-slowdown-trigger` controls RocksDB's
    setting `soft_pending_compaction_bytes_limit`, which controls how many
    pending compaction bytes RocksDB tolerates before it slows down writes.
  - `--rocksdb.pending-compactions-bytes-stop-trigger` controls RocksDB's
    setting `hard_pending_compaction_bytes_limit`, which controls how many
    pending compaction bytes RocksDB tolerates before it stops writes entirely.
  - `--rocksdb.throttle-lower-bound-bps`, which controls a lower bound for the
    bandwidth restriction on RocksDB writes the throttle imposes.
