@@ -271,7 +271,6 @@ bool ImportHelper::readHeadersFile(std::string const& headersFile,
   
   constexpr int BUFFER_SIZE = 16384;
   char buffer[BUFFER_SIZE];
-
   while (!_hasError) {
     ssize_t n = fd->read(buffer, sizeof(buffer));
 
@@ -297,6 +296,7 @@ bool ImportHelper::readHeadersFile(std::string const& headersFile,
     _outputBuffer.appendChar('\n');
   }
 
+
   if (_rowsRead > 2) {
     _errorMessages.push_back("headers file '" + headersFile + "' contained more than a single line of headers");
     return false;
@@ -310,6 +310,8 @@ bool ImportHelper::readHeadersFile(std::string const& headersFile,
   _numberLines = 0;
   // restore copy of _rowsToSkip 
   _rowsToSkip = rowsToSkip;
+  _outputBuffer.reset();
+
 
   return true;
 }
@@ -427,11 +429,12 @@ bool ImportHelper::importDelimited(std::string const& collectionName,
     reportProgress(totalLength, fd->offset(), nextProgress);
 
     TRI_ParseCsvString(&parser, buffer, n);
+
   }
 
-  if (_outputBuffer.length() > 0) {
-    sendCsvBuffer();
-  }
+  // trailing buffer items than can be accumulated because buffer length is
+  // smaller than batch size, so we send the data at the end of the parsing
+  handleCsvBuffer(0);
 
   TRI_DestroyCsvParser(&parser);
 
@@ -808,9 +811,11 @@ void ImportHelper::addLastField(char const* field, size_t fieldLength,
 
   _lineBuffer.appendChar(']');
 
-  if (row == _rowsToSkip) {
+  if (row == _rowsToSkip && !_headersSeen) {
     // save the first line
     _firstLine = std::string(_lineBuffer.c_str(), _lineBuffer.length());
+    _lineBuffer.reset();
+    return;
   } else if (row > _rowsToSkip && _firstLine.empty()) {
     // error
     MUTEX_LOCKER(guard, _stats._mutex);
@@ -822,6 +827,10 @@ void ImportHelper::addLastField(char const* field, size_t fieldLength,
   // read a complete line
 
   if (_lineBuffer.length() > 0) {
+    if (!_outputBuffer.length()) {
+      _outputBuffer.appendText(_firstLine);
+      _outputBuffer.appendChar('\n');
+    }
     _outputBuffer.appendText(_lineBuffer);
     _lineBuffer.reset();
   } else {
@@ -829,10 +838,10 @@ void ImportHelper::addLastField(char const* field, size_t fieldLength,
     ++_stats._numberErrors;
   }
 
-  if (_outputBuffer.length() > getMaxUploadSize()) {
-    sendCsvBuffer();
-    _outputBuffer.appendText(_firstLine);
-  }
+  // we will send the data if the buffer is already bigger than the batch size,
+  // otherwise, it will accumulate to be sent later when buffer length is bigger
+  // than the batch size
+  handleCsvBuffer(getMaxUploadSize());
 }
 
 bool ImportHelper::collectionExists() {
@@ -954,8 +963,8 @@ bool ImportHelper::truncateCollection() {
   return false;
 }
 
-void ImportHelper::sendCsvBuffer() {
-  if (_hasError) {
+void ImportHelper::handleCsvBuffer(uint64_t bufferSizeThreshold) {
+  if (_hasError || _outputBuffer.length() <= bufferSizeThreshold) {
     return;
   }
 
