@@ -1092,6 +1092,10 @@ function runArangoImport (options, instanceInfo, what, coreCheck = false) {
     args['remove-attribute'] = what.removeAttribute;
   }
 
+  if (what.batchSize !== undefined) {
+    args['batch-size'] = what.batchSize;
+  }
+
   return executeAndWait(ARANGOIMPORT_BIN, toArgv(args), options, 'arangoimport', instanceInfo.rootDir, coreCheck);
 }
 
