@@ -51,6 +51,10 @@
   db._drop("UnitTestsImportCsvConvert");
   db._drop("UnitTestsImportCsvNoConvert");
   db._drop("UnitTestsImportCsvNoEol");
+  db._drop("UnitTestsImportDataBatchSizeWithoutHeaderFile");
+  db._drop("UnitTestsImportDataBatchSizeWithoutHeaderFile2");
+  db._drop("UnitTestsImportDataBatchSizeWithHeaderFile");
+  db._drop("UnitTestsImportDataBatchSizeWithHeaderFile2");
   db._drop("UnitTestsImportTsv1");
   db._drop("UnitTestsImportTsv1Gz");
   db._drop("UnitTestsImportTsv2");
@@ -76,6 +80,10 @@
   db._create("UnitTestsImportTsv1Gz");
   db._create("UnitTestsImportTsv2");
   db._create("UnitTestsImportVertex");
+  db._create("UnitTestsImportDataBatchSizeWithoutHeaderFile");
+  db._create("UnitTestsImportDataBatchSizeWithoutHeaderFile2");
+  db._create("UnitTestsImportDataBatchSizeWithHeaderFile");
+  db._create("UnitTestsImportDataBatchSizeWithHeaderFile2");
   db._createEdgeCollection("UnitTestsImportEdge");
   db._createEdgeCollection("UnitTestsImportEdgeGz");
   db._create("UnitTestsImportIgnore");
